--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,11 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: "Open Sans", sans-serif;
 }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
 h1,
 h2,
 h3,
